# FAQ-HuddleUp

./: .gitattributes  .gitignore  README.md  start.sh  start_windows.bat
backend/: .env.example  .gitignore  EMBEDDINGS_SETUP_GUIDE.md  build.sh  database.py  debug_pinecone.py  debug_similarity.py  generate_embeddings.py  google_calendar_service.py  huddleup_training_data.json  main.py  main_backup.py  models.py  openai_service.py  populate_data.py  pyproject.toml  render.yaml  requirements.txt  semantic_search.py  supabase_embeddings_setup.sql  supabase_schema.sql  use_cases.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWidget.tsx  chats.tsx
frontend/src/services/: chatService.ts
frontend/src/types/: chat.ts
