[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faq-huddleup"
version = "1.0.0"
description = "FAQ HuddleUp - AI-powered FAQ chatbot with discovery"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.4.2",
    "pydantic-core==2.10.1",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "openai==1.3.7",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.108.0",
    "pinecone-client==3.0.2",
    "supabase==1.0.3",
    "gunicorn==21.2.0",
]
