[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faq-huddleup"
version = "1.0.0"
description = "FAQ HuddleUp - AI-powered FAQ chatbot with discovery"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.6.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "httpx==0.26.0",
    "openai==1.14.0",
    "google-auth==2.26.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.108.0",
    "pinecone-client==4.1.1",
    "supabase==2.3.4",
    "gunicorn==21.2.0",
    "cryptography==42.0.0",
]
